# tale

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ToDo.txt
CBLibraries/CBBase/: CBBaseLibrary.h  CMakeLists.txt
CBLibraries/CBBase/GUID/: GUID.cpp  GUID.h
CBLibraries/CBBaseTest/: CMakeLists.txt  GUIDCreationTest.cpp
CBLibraries/CBBaseTest/GUID/: GUIDTest.cpp
CBLibraries/CBEntityComponentSystem/: CBEntityComponentSystemLibrary.h  CMakeLists.txt  Entity.cpp  EntityComponentDatabase.cpp  EntityComponentDatabase.h
CBLibraries/CBEntityComponentSystem/Core/: Component.cpp  Component.h  ComponentIndexGenerator.cpp  ComponentIndexGenerator.h  ComponentIndexGenerator.tpp  ComponentsContainer.cpp  ComponentsContainer.h  ComponentsContainer.tpp  EntitiesComponentsContainer.cpp  EntitiesComponentsContainer.h  Entity.cpp  Entity.h  EntityComponentDatabase.cpp  EntityComponentDatabase.h  EntityComponentDatabase.tpp  EntityComponentDatabaseModifier.cpp  EntityComponentDatabaseModifier.h  EntityComponentDatabaseModifier.tpp  EntityComponentDatabaseQuerier.cpp  EntityComponentDatabaseQuerier.h  EntityFactory.cpp  EntityFactory.h
CBLibraries/CBEntityComponentSystem/Core/Component/: ComponentIndexGenerator.cpp  ComponentIndexGenerator.h  ComponentIndexGenerator.tpp  ComponentsContainer.cpp  ComponentsContainer.h  ComponentsContainer.tpp
CBLibraries/CBEntityComponentSystemTest/: CMakeLists.txt  EntityComponentDatabaseTest.cpp
CBLibraries/CBEntityComponentSystemTest/Core/: ComponentCreationTest.cpp  ComponentIndexGenerationTest.cpp  ComponentsContainerTest.cpp  EntitiesComponentsContainerTest.cpp  EntityComparingTest.cpp  EntityComponentModificationTest.cpp  EntityComponentQueryingTest.cpp  EntityCreationTest.cpp  EntityStoringTest.cpp  TestComponents.h
CBLibraries/CBEntityComponentSystemTest/Core/Component/: ComponentIndexGenerationTest.cpp  ComponentsContainerTest.cpp
Tale/TaleExe/: CMakeLists.txt  main.cpp
Tale/TaleLib/: CMakeLists.txt
Tale/TaleTest/: CMakeLists.txt
